<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutMenu"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="20dp"
    tools:layout_editor_absoluteX="-98dp"
    tools:layout_editor_absoluteY="-18dp">

    <ImageView
        android:id="@+id/modoOscuroIcon"
        android:layout_width="46dp"
        android:layout_height="48dp"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toStartOf="@+id/howUseIcon"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/aboutUsIcon"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/oscuro" />

    <ImageView
        android:id="@+id/aboutUsIcon"
        android:layout_width="47dp"
        android:layout_height="41dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toStartOf="@+id/modoOscuroIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/about_us" />

    <ImageView
        android:id="@+id/howUseIcon"
        android:layout_width="47dp"
        android:layout_height="46dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/modoOscuroIcon"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/how_to_use" />

    <TextView
        android:id="@+id/modoOscuroText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/theme_switch"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/howUseText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/aboutUsText"
        app:layout_constraintTop_toBottomOf="@+id/modoOscuroIcon" />

    <TextView
        android:id="@+id/aboutUsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="32dp"
        android:text="@string/about_us"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/modoOscuroText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutUsIcon" />

    <TextView
        android:id="@+id/howUseText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="25dp"
        android:text="@string/como_usar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/modoOscuroText"
        app:layout_constraintTop_toBottomOf="@+id/howUseIcon" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Opciones"
        android:textColor="#FF9800"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>